# i-wanna-be-yours

./: .env.example  .gitignore  AI_Security_Audit_Execution_Prompt.md  ARCHITECTURE_DESIGN.md  CREATE_CONTENT_PLAN.md  Hybrid-Landing-Page-Modal.md  INTEGRATION_DRAFT.md  INTEGRATION_REPORT.md  LICENSE  PRACTICE_CONSOLIDATION_PLAN.md  QUIZ_IMPLEMENTATION_PLAN.md  README.md  ROUTES.md  STUDY_PLAN_IMPLEMENTATION.md  TEST_REPORT.md  api.md  backend-implementation-plan.md  docker-compose.yml  error_report.md  exam-list.md  flashcard.md  frontend-implementation-plan.md  hanachan_chat_ui_proposal.md  implementation_plan_artifact_refinement.md  implementation_plan_hanachan_creator.md  implementation_plan_hybrid_landing_modal.md  implementation_plan_ingestion_notification.md  implementation_plan_quiz_exam.md  implementation_plan_route_restructure.md  implementation_plan_semantic_embedding.md  integration_plan.md  jmdict_db_notes.md  load_account.sh  nginx.conf  package-lock.json  phase-0-checklist.md  phase-0-report.md  phase-1-checklist.md  phase-1-report.md  phase-2-checklist.md  (+21 more)
backend/hanachan/: .dockerignore  .env  .env.example  .gitignore  DEBUG_NOTES.md  Dockerfile  README.md  agent_input_example.py  app.py  chat.py  config.yaml  config_loader.py  content_creator_demo.py  context_examples.py  docker-compose.yml  initialize_tables.py  kanji-sample.txt  llm_factory_test.py  llm_factory_test_config.yaml  main.py  mas.md  mas_graph.py  mas_service.py  mas_test_config.yaml  mcp_test.py  prompt-context.txt  pyproject.toml  requirements.txt  reset_db.py  run_ollama.sh  run_worker.sh  seed_users_chat.py  verify_multimodal_logic.py  verify_refactor.py
backend/hanachan/agent/: builder.py  checkpointer.py  core_agent.py  graph.py  mcp.py  mock_agent.py  neural_swarm.py  ollama_agent.py
backend/hanachan/agents/: __init__.py  agent-mcp.py  config.json  config.yaml  factory.py  graph.py  mcp_server.py  ollama_models.py  openai_models.py  qwen3-4b.py  rag_agent.py  run_ollama.sh
backend/python-dictionary/: .env.example  main.py  pyproject.toml  test_integration.py
backend/resource-service/: app.py  phase-1-checklist.md  phase-1-report.md  phase-2-checklist.md  phase-2-report.md  phase-3-checklist.md  phase-3-report.md  phase-4-checklist.md  phase-4-report.md  phase-5-checklist.md  phase-5-report.md  phase-6-checklist.md  phase-6-report.md  phase-7-checklist.md  plan_resource_service.md  pyproject.toml  worker.py
(+2444 files in other folders)
