[project]
name = "user-input"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "flask-cors>=5.0.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "flask-talisman>=1.1.0",
    "flask-limiter>=4.1.1",
    "langchain>=1.2.0",
    "langchain-core>=1.2.5",
    "langchain-openai>=1.1.6",
    "langchain-experimental>=0.4.1",
    "motor>=3.7.1",
    "qdrant-client>=1.16.2",
    "rq>=2.6.1",
    "redis>=7.1.0",
    "pyjwt>=2.10.1",
    "langchain-ollama>=1.0.1",
    "langchain-qdrant>=1.1.0",
]
